kube-app/nginx/nginx-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        resources: 
          requests: 
            cpu: "250m"
          limits:
            cpu: "500m"
        ports:
        - containerPort: 8080
        volumeMounts:
        - mountPath: /etc/nginx/conf.d
          name: nginx-config
      volumes:
        - name: nginx-config
          configMap:
            name: nginx-config
---
apiVersion: v1      #ersion: v1
kind: Service
metadata:
  name: nginx-deployment
  labels:
    app: nginx
spec: 
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: nginx
---
apiVersion: v1      #ersion: v1
kind: Service
metadata:
  name: nginx-nodeport-deployment
  labels:
    app: nginx-nodeport
spec:
  type: NodePort
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30000
  selector:
    app: nginx
