kube-app/nginx/nginx-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: navid
    #  annotations:
    #      nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx 
  rules:
    - host: navid.local 
      http:
        paths:
         - path: /
           pathType: Prefix
           backend: 
             service: 
               name: nginx-deployment
               port:
                 number: 8080
